--- a/templates/user.html
+++ b/templates/user.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LaborLink - Connect with Local Workers</title>
-  <link rel="stylesheet" href="user.css">
+  <link rel="stylesheet" href="../static/css/user.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -311,6 +311,6 @@
     </div>
   </footer>
 
-  <script src="user.js"></script>
+  <script src="../static/css/user.js"></script>
 </body>
 </html>
