--- a/templates/Employer.html
+++ b/templates/Employer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkillMatch - HR Platform</title>
-  <link rel="stylesheet" href="hmm.css">
+  <link rel="stylesheet" href="../static/css/Employer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -373,6 +373,6 @@
     </div>
   </footer>
 
-  <script src="hmm.js"></script>
+  <script src="../static/js/Employer.js"></script>
 </body>
 </html>
