--- a/templates/Employer.html
+++ b/templates/Employer.html
@@ -373,6 +373,6 @@
     </div>
   </footer>
 
-  <script src="../static/css/Employer.js"></script>
+  <script src="../static/js/Employer.js"></script>
 </body>
 </html>
