dashboards with navigation errors

--- a/templates/coop_hr1.html
+++ b/templates/coop_hr1.html
@@ -667,13 +667,11 @@
         <li class="nav-item">
           <a href="#" class="nav-link active">Jobs</a>
           <div class="dropdown-content">
-            <a href="#" class="dropdown-link active">All Job Posts</a>
-            <a href="#" class="dropdown-link">Create New Job</a>
-            <a href="#" class="dropdown-link">Archived Jobs</a>
+            <a href="./coop_hr1.html" class="dropdown-link">Create New Job</a>
           </div>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Candidates</a>
+          <a href="./coop_hr2.html" class="nav-link">Candidates</a>
           <div class="dropdown-content">
             <a href="#" class="dropdown-link">All Candidates</a>
             <a href="#" class="dropdown-link">By Job Post</a>
