--- a/templates/Cemployee_followup.html
+++ b/templates/Cemployee_followup.html
@@ -15,7 +15,7 @@
         </div>
         
         <div class="form-container">
-            <form id="employeeInfoForm">
+            <form id="employeeInfoForm" action="{{url_for('auth.employee_info')}}" method="post" enctype="multipart/form-data">
                 <h2 class="section-title">Contact Information</h2>
                 
                 <div class="form-group">
