--- a/templates/Cemployee_signin.html
+++ b/templates/Cemployee_signin.html
@@ -77,34 +77,55 @@
                         <select id="country" name="country" required>
                             <option value="">Select Country</option>
                             <option value="india">India</option>
-                            <option value="usa">United States</option>
-                            <option value="uk">United Kingdom</option>
-                            <option value="canada">Canada</option>
-                            <option value="australia">Australia</option>
                         </select>
                     </div>
 
                     <div class="form-group">
                         <label for="state">State</label>
                         <select id="state" name="state" required>
-                            <option value="">Select State</option>
+                            <option value="andhra-pradesh">Andhra Pradesh</option>
+                            <option value="arunachal-pradesh">Arunachal Pradesh</option>
+                            <option value="assam">Assam</option>
+                            <option value="bihar">Bihar</option>
+                            <option value="chhattisgarh">Chhattisgarh</option>
+                            <option value="goa">Goa</option>
+                            <option value="gujarat">Gujarat</option>
+                            <option value="haryana">Haryana</option>
+                            <option value="himachal-pradesh">Himachal Pradesh</option>
+                            <option value="jharkhand">Jharkhand</option>
+                            <option value="karnataka">Karnataka</option>
+                            <option value="kerala">Kerala</option>
+                            <option value="madhya-pradesh">Madhya Pradesh</option>
+                            <option value="maharashtra">Maharashtra</option>
+                            <option value="manipur">Manipur</option>
+                            <option value="meghalaya">Meghalaya</option>
+                            <option value="mizoram">Mizoram</option>
+                            <option value="nagaland">Nagaland</option>
+                            <option value="odisha">Odisha</option>
+                            <option value="punjab">Punjab</option>
+                            <option value="rajasthan">Rajasthan</option>
+                            <option value="sikkim">Sikkim</option>
+                            <option value="tamil-nadu">Tamil Nadu</option>
+                            <option value="telangana">Telangana</option>
+                            <option value="tripura">Tripura</option>
+                            <option value="uttar-pradesh">Uttar Pradesh</option>
+                            <option value="uttarakhand">Uttarakhand</option>
+                            <option value="west-bengal">West Bengal</option>
+
                         </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="District">District Name</label>
+                        <input type="text" id="district" name="District" required />
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="district">District</label>
-                    <select id="district" name="district" required>
-                        <option value="">Select District</option>
-                    </select>
-                </div>
-
                 <div class="button-group">
-                    <button type="button" class="create-account-btn">Create Account</button>
+                    <button type="submit" class="create-account-btn">Create Account</button>
                 </div>
             </form>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/Cemployee_sign-in.js') }}"></script>
+    
 </body>
 </html>
