little color changes

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -52,7 +52,7 @@
         <button class="btn btn-primary">Get Started</button>
       </div>
       <div class="hero-image" data-aos="fade-left" data-aos-duration="1000">
-        <img src="..static/pics/main.png" alt="Rural workers">
+        <img src="../static/pics/working rural indian people.jpg" alt="Rural workers">
       </div>
     </div>
   </section>
