--- a/templates/lb_employee Db.html
+++ b/templates/lb_employee Db.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Dashboard - SabKoKaam</title>
-    <link rel="stylesheet" href="..static/css/lb_employee.css"/>
+    <link rel="stylesheet" href="../static/css/lb_employee DB.css"/>
     <style>
         .location-overlay {
             position: fixed;
