--- a/templates/landing.html
+++ b/templates/landing.html
@@ -33,7 +33,7 @@
           <li><a href="#gallery" class="nav-link">Gallery</a></li>
           <li><a href="#contact" class="nav-link">Contact Support</a></li>
         </ul>
-        <button class="btn btn-primary download-btn">Download App</button>
+        <button class="btn btn-primary download-btn"><a href="{{ url_for('option') }}">Register</a></button>
         <button class="mobile-menu-toggle">
           <span></span>
           <span></span>
@@ -170,15 +170,15 @@
           <div class="gallery-caption">Rural workers in action</div>
         </div>
         <div class="gallery-item">
-          <img src="..static/pics/working img.jpg" alt="Rural workers working together">
+          <img src="../static/pics/working img.jpg" alt="Rural workers working together">
           <div class="gallery-caption">All-women workforce</div>
         </div>
         <div class="gallery-item">
-          <img src="..static/pics/Working Workers.jpg" alt="Rural workers collaborating">
+          <img src="../static/pics/Workshop Workers.jpeg" alt="Rural workers collaborating">
           <div class="gallery-caption">Workshops</div>
         </div>
         <div class="gallery-item">
-          <img src="..static/pics/working rural indian people.jpg" alt="Rural workers in a job setting">
+          <img src="../static/pics/working rural indian people.jpg" alt="Rural workers in a job setting">
           <div class="gallery-caption">Outdoor job settings</div>
         </div>
       </div>
