landing page fully done

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -104,8 +104,8 @@
         <div class="about-images" data-aos="fade-right">
           <div class="image-grid">
             <img src="../static/pics/all women working.jpeg" alt="Rural worker">
-            <img src="..static/pics/indian women.jpg" alt="Rural worker">
-            <img src="..static/pics/ramesh worker.jpg" alt="Rural worker">
+            <img src="../static/pics/indian women.jpg" alt="Rural worker">
+            <img src="../static/pics/ramesh worker.jpg" alt="Rural worker">
           </div>
         </div>
         <div class="about-content" data-aos="fade-left">
@@ -244,7 +244,7 @@
           <button class="btn btn-primary">Get in Contact</button>
         </div>
         <div class="contact-image">
-          <img src="../static/pics/shanking hands.jpg" alt="Contact Support">
+          <img src="../static/pics/shanking hands.jpeg" alt="Contact Support">
         </div>
       </div>
     </div>
