--- a/templates/Cemployee_signin.html
+++ b/templates/Cemployee_signin.html
@@ -54,10 +54,10 @@
                 <!-- Radio Buttons for Role -->
                 <div class="form-group">
                   <label>
-                    <input type="radio" name="role" value="Employee"> Employee
+                    <input type="radio" name="role" value="CEmployee"> Employee
                   </label><br>
                   <label>
-                    <input type="radio" name="role" value="Employer"> Employer
+                    <input type="radio" name="role" value="CEmployer"> Employer
                   </label><br>
                 </div>
 
