--- a/templates/lb_login.html
+++ b/templates/lb_login.html
@@ -16,7 +16,7 @@
 
     <!-- Login Form Section -->
     <section class="login-section">
-      <form class="login-form" id="loginForm" method="post" action="{{url_for('auth.login')}}">
+      <form class="login-form" id="loginForm" method="post" action="{{url_for('auth.login')}}" enctype="multipart/form-data">
         <div class="form-group">
           <label for="user-input">Email / Phone Number</label>
           <input type="email" id="user-input" class="form-control" name="email" placeholder="Enter your email or phone number" required>
@@ -38,7 +38,5 @@
       </form>
     </section>
   </div>
-
-  <script src="{{ url_for('static', filename='js/log-in.js') }}"></script>
 </body>
 </html>
